# KinFragLib_PocketEnum

./: .gitignore  Dockerfile  README.md  definitions.json  env.yaml  environment.yml  pyproject.toml  setup.py  update.md
config/5n1f/: AP.flexx  AP.hydescorer  FP.flexx  FP.hydescorer  GA.flexx  GA.hydescorer  settings.json
config/templates/: settings.json
config_heavy_atom/3amb/: AP.flexx  AP.hydescorer  FP.flexx  FP.hydescorer  GA.flexx  GA.hydescorer  SE.flexx  SE.hydescorer
config_heavy_atom/5l4q/: AP.flexx  AP.hydescorer  FP.flexx  FP.hydescorer  SE.flexx  SE.hydescorer  defs.txt
data/: create_folders.sh
evaluation/: README.md  chembl.ipynb  chembl_database_comp.py  chembl_pka_comp.ipynb  clustering.ipynb  crystal_struct_compounds_comp.ipynb  crystal_struct_first_compounds.csv  diversity.ipynb  docking_utils.py  evaluate_chemical_properties.ipynb  novelty.ipynb  original_ligands.ipynb  pharmacophore_constraints.ipynb  pka_chembl.csv  program_config.ipynb  remove_chembl_scaffolds.py  utils_eval.py  violations.ipynb
notebooks/: README.md  adapted_mols.sdf  brics_rules.py  chembl.ipynb  chembl_database_comp.py  chembl_pka_comp.ipynb  compare_pka.py  diversity.ipynb  evaluate_chemical_properties.ipynb  fragment_reduction.ipynb  getting_started.ipynb  getting_started_program_config.ipynb  novelty.ipynb  proposed_ligands_hyde.sdf  violations.ipynb
pocket_definition/: README  README.md  pocket_definition.py
src/: _utils.py  brics_rules.py  docking_utils.py  fragment_docking.py  fragment_docking_concurrent.py  mailing.py  threading_docking.py
(+96 files in other folders)
